syntax = "proto3";
package outcomes_service.v1;

option go_package = "gateway/gen/go/outcomes_service/v1";


import "google/protobuf/timestamp.proto";


enum OutcomeStatus {
  UNSPECIFIED = 0;
  ACTIVE = 1;
  PARKED = 2;
  COMPLETED = 3;
  ABANDONED = 4;
}

message Outcome {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string why_it_matters = 4;
  google.protobuf.Timestamp deadline = 5;
  OutcomeStatus status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp completed_at = 8;
  google.protobuf.Timestamp archived_at = 9;
  repeated Driver drivers = 10;
  repeated Action actions = 11;
  repeated SuccessMetric success_metrics = 12;
}

message Driver {
  string id = 1;
  string title = 2;
  string outcome_id = 3;
  float position = 4;
  google.protobuf.Timestamp created_at = 5;
  repeated Action actions = 6;
  Outcome outcome = 7;
  string description = 8;

}

message Action {
  string id = 1;
  string driver_id = 2;
  string outcome_id = 3;
  string user_id = 4;
  string title = 5;
  bool is_completed = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp scheduled_for = 9;
  google.protobuf.Timestamp last_moved_outcome_at = 10;
  google.protobuf.Timestamp completed_at = 11;
  Outcome outcome = 12;
  Driver driver = 13;
  string description = 14;
}

message SuccessMetric {
  string id = 1;
  string outcome_id = 2;
  string metric_name = 3;
  double target_value = 4;
  double current_value = 5;
  string unit = 6;
  string description = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  Outcome outcome = 10;
}