syntax = "proto3";
package outcomes_service.v1;

option go_package = "gateway/gen/go/outcomes_service/v1";

import "outcomes_service/v1/models.proto";

service SuccessMetricsService {
  rpc CreateSuccessMetric(CreateSuccessMetricRequest) returns (SuccessMetric);

  rpc GetSuccessMetric(GetSuccessMetricRequest) returns (SuccessMetric);

  rpc ListSuccessMetrics(ListSuccessMetricsRequest) returns (ListSuccessMetricsResponse);

  rpc UpdateSuccessMetric(UpdateSuccessMetricRequest) returns (SuccessMetric);

  rpc DeleteSuccessMetric(DeleteSuccessMetricRequest) returns (DeleteSuccessMetricResponse);
}

message CreateSuccessMetricRequest {
  string outcome_id = 1;
  string metric_name = 2;
  double target_value = 3;
  optional double current_value = 4;
  string unit = 5;
  optional string description = 6;
}

message GetSuccessMetricRequest {
  string id = 1;
}

message UpdateSuccessMetricRequest {
  string id = 1;
  optional string metric_name = 2;
  optional double target_value = 3;
  optional double current_value = 4;
  optional string unit = 5;
  optional string description = 6;
}

message ListSuccessMetricsRequest {
  string outcome_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListSuccessMetricsResponse {
  repeated SuccessMetric data = 1;
  string next_page_token = 2;
  int32 total_count = 3;
  int32 page_size = 4;
  int32 current_page = 5;
  int32 total_pages = 6;
}

message DeleteSuccessMetricRequest {
  string id = 1;
}

message DeleteSuccessMetricResponse {
  bool success = 1;
}
